# internal/adapters/inbound/fiberapp/request.go
@@ -31,3 +31,11 @@ type ResetPasswordRequest struct {
 	Token       string `json:"token" validate:"required"`
 	NewPassword string `json:"new_password" validate:"required"`
 }
+
+type ConfirmActivationRequest struct {
+	Token string `json:"token" validate:"required"`
+}
+
+type ResendActivationRequest struct {
+	Email string `json:"email" validate:"required,email"`
+}
